logilab-aspects (0.1.4-3) unstable; urgency=low

  * changed standards to 3.7.2

 -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:06:27 +0200

logilab-aspects (0.1.4-2) unstable; urgency=low

  * version independent package, storing module in /usr/lib/site-python

 -- Alexandre Fayolle <afayolle@debian.org>  Fri, 17 Feb 2006 11:43:37 +0100

logilab-aspects (0.1.4-1) unstable; urgency=low

  * new upstream release

 -- Adrien Di Mascio <Adrien.DiMascio@logilab.fr>  Tue, 29 Nov 2005 10:16:37 +0100

logilab-aspects (0.1.3-1) unstable; urgency=low

  * new upstream release (bugfix)

 -- Adrien Di Mascio <Adrien.DiMascio@logilab.fr>  Wed, 15 Jun 2005 11:14:50 +0200

logilab-aspects (0.1.2-1) unstable; urgency=low

  * Added some aspects examples. Beginning of Design Pattern implementetation
    with aspects (Observer).

 -- Adrien Di Mascio <adim@logilab.fr>  Mon,  16 Jun 2003 09:25:19 +0200

logilab-aspects (0.1.1-1) unstable; urgency=low

  * Added func.func_global in contracts' local dict (+ unittests)

 -- Adrien Di Mascio <adim@logilab.fr>  Fri,  6 Jun 2003 12:25:19 +0200

logilab-aspects (0.1.0-1) unstable; urgency=low

  * Initial release

 -- Adrien Di Mascio <adim@logilab.fr>  Wed,  4 Jun 2003 16:25:19 +0200