@@ -1,5 +1,3 @@
-usr/lib/site-python/logilab/aspects
-usr/share/doc/python-logilab-aspects
 usr/share/doc/python-logilab-aspects/html
 usr/share/doc/python-logilab-aspects/examples
 usr/share/doc/python-logilab-aspects/tests
