@@ -3,25 +3,6 @@
 # postinst script for Debian python packages.
 # Written 1998 by Gregor Hoffleit <flight@debian.org>.
 #
-DIRLIST="/usr/lib/site-python/logilab/aspects"
-
-
-case "$1" in
-    configure|abort-upgrade|abort-remove|abort-deconfigure)
-        for i in $DIRLIST ; do
-            python -O /usr/lib/python2.3/compileall.py -q $i
-            python /usr/lib/python2.3/compileall.py -q $i
-        done
-    ;;
-
-    *)
-        echo "postinst called with unknown argument \`$1'" >&2
-        exit 1
-    ;;
-esac
-
-
-
 
 #DEBHELPER#
 
