@@ -1,8 +1,9 @@
 logilab-aspects (0.1.4-3) unstable; urgency=low
 
   * changed standards to 3.7.2
+  * updated to new python policy
 
- -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:06:27 +0200
+ -- Alexandre Fayolle <afayolle@debian.org>  Wed, 14 Jun 2006 18:32:55 +0200
 
 logilab-aspects (0.1.4-2) unstable; urgency=low
 
